[workspace]
resolver = "3"
members = [
    "src/common/error",
    "src/common/config",
    "src/mem7-core",
    "src/mem7-llm",
    "src/mem7-embedding",
    "src/mem7-vector",
    "src/mem7-history",
    "src/mem7-dedup",
    "src/mem7-store",
    "src/bindings/mem7-python",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
rust-version = "1.85"
repository = "https://github.com/mem7ai/mem7"
homepage = "https://github.com/mem7ai/mem7"
description = "LLM-powered long-term memory engine — Rust core with Python bindings"

[workspace.dependencies]
# Internal crates
mem7-error = { path = "src/common/error", version = "0.1.0" }
mem7-config = { path = "src/common/config", version = "0.1.0" }
mem7-core = { path = "src/mem7-core", version = "0.1.0" }
mem7-llm = { path = "src/mem7-llm", version = "0.1.0" }
mem7-embedding = { path = "src/mem7-embedding", version = "0.1.0" }
mem7-vector = { path = "src/mem7-vector", version = "0.1.0" }
mem7-history = { path = "src/mem7-history", version = "0.1.0" }
mem7-dedup = { path = "src/mem7-dedup", version = "0.1.0" }
mem7-store = { path = "src/mem7-store", version = "0.1.0" }

# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# HTTP
reqwest = { version = "0.12", features = ["json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# ID generation
uuid = { version = "1", features = ["v7", "serde"] }

# Database
tokio-rusqlite = "0.7"
rusqlite = { version = "0.37", features = ["bundled"] }

# Error handling
thiserror = "2"

# Logging
tracing = "0.1"

# Python bindings
pyo3 = { version = "0.28.2", features = ["extension-module", "abi3-py310"] }
