[build-system]
build-backend = "maturin"
requires = ["maturin>=1.5,<2"]

[project]
name = "mem7"
version = "0.2.2"
description = "High-performance AI memory engine with Rust core"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
]

[project.urls]
Homepage = "https://github.com/mem7ai/mem7"
Repository = "https://github.com/mem7ai/mem7"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[tool.maturin]
manifest-path = "src/bindings/mem7-python/Cargo.toml"
python-source = "."
module-name = "mem7._mem7"
features = []
