[package]
name = "mem7-dedup"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Memory deduplication logic for the mem7 memory engine"

[dependencies]
mem7-error.workspace = true
mem7-core.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
uuid.workspace = true
