[package]
name = "mem7-embedding"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Embedding client abstraction for the mem7 memory engine"

[features]
default = []
fastembed = ["dep:fastembed"]

[dependencies]
mem7-error.workspace = true
mem7-config.workspace = true
mem7-core.workspace = true
async-trait.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
fastembed = { version = "5.12", optional = true }
