[package]
name = "mem7-history"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "SQLite-backed audit history for the mem7 memory engine"

[dependencies]
mem7-error.workspace = true
mem7-core.workspace = true
mem7-datetime.workspace = true
async-trait.workspace = true
tokio-rusqlite.workspace = true
rusqlite.workspace = true
uuid.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio.workspace = true
