[package]
name = "mem7-store"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "The core memory engine orchestrator for mem7"

[dependencies]
mem7-error.workspace = true
mem7-config.workspace = true
mem7-core.workspace = true
mem7-llm.workspace = true
mem7-embedding.workspace = true
mem7-vector.workspace = true
mem7-history.workspace = true
mem7-dedup.workspace = true
mem7-reranker.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
