[package]
name = "mem7-telemetry"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Optional OpenTelemetry integration for mem7"

[dependencies]
mem7-config.workspace = true
mem7-error.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-opentelemetry = "0.32"
opentelemetry = "0.31"
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.31", features = ["grpc-tonic"] }
