[package]
name = "mem7-node"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Node.js bindings for the mem7 memory engine"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "3", default-features = false, features = ["napi8", "async", "tokio_rt", "serde-json"] }
napi-derive = "3"
mem7-store.workspace = true
mem7-core.workspace = true
mem7-config.workspace = true
mem7-error.workspace = true
mem7-telemetry.workspace = true
serde_json.workspace = true
uuid.workspace = true

[build-dependencies]
napi-build = "2"
