[package]
name = "mem7-python"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Python bindings for the mem7 memory engine"
publish = false

[lib]
crate-type = ["cdylib"]
name = "_mem7"

[dependencies]
mem7-store.workspace = true
mem7-core.workspace = true
mem7-config.workspace = true
mem7-error.workspace = true
serde_json.workspace = true
tokio.workspace = true
uuid.workspace = true
pyo3.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
rustls = { version = "0.23", default-features = false, features = ["std", "aws_lc_rs"] }

[target.'cfg(not(target_os = "linux"))'.dependencies]
rustls = { version = "0.23", default-features = false, features = ["std", "ring"] }
