[package]
name = "mem7-python"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Python bindings for the mem7 memory engine"
publish = false

[lib]
crate-type = ["cdylib"]
name = "_mem7"

[dependencies]
mem7-store.workspace = true
mem7-core.workspace = true
mem7-config.workspace = true
mem7-error.workspace = true
mem7-telemetry.workspace = true
serde_json.workspace = true
tokio.workspace = true
uuid.workspace = true
pyo3.workspace = true
pyo3-async-runtimes = { version = "0.28", features = ["tokio-runtime"] }
