[package]
name = "mem7-error"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Error types for the mem7 memory engine"

[dependencies]
thiserror.workspace = true
reqwest.workspace = true
serde_json.workspace = true
tokio-rusqlite.workspace = true
rusqlite.workspace = true
